# omen

./: .env.example  .gitignore  .gitmodules  .pylintrc  LICENSE  NOTICE.md  PROTOCOL.md  README.md  README.zh.md  codecov.yml  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: package.yml  publish-pypi.yml  pylint.yml  pytest.yml  python-package.yml  release.yml
app/: case_analysis.py  founder_analysis.py  scenario_planning.py  spec6_case_replay.py  strategic_actor.py
cases/: ontology.md  vector-memory.md  x-developer.md
cases/actors/: elon-musk.md  shenda.md  steve-jobs.md
cases/founder/: jack-ma.md  jeff-bezos.md
cases/situations/: README.md  nokia-elop-2010.md  sap_reltio_acquisition.md
config/: llm.example.toml
config/prompts/: base.yaml  prompts_base.yaml  prompts_pro.yaml  report.yaml
config/templates/: planning.yaml  signals.yaml  situation_brief.md  situation_case.md
data/ingest/: README.md
data/scenarios/: nokia.json  nokia.md  ontology.json  strategic_actor_nokia_pack.json  vector-memory.json
demo/app/: scenario_planning.py
docs/: README.md  case-template.md  concepts.md  founder-to-actor-migration.md  how-it-works.md  how-it-works.zh.md  ingest.md  ontology.md  philosophy.md  philosophy.zh.md  precision.md  quick-start-llm.md  quick-start.md  roadmap.md  run-example.md  strategic-actor-artifacts.md  strategic-actor-concepts.md  strategic-actor-validator.md  strategic-actor.md  why-omen.md  why-omen.zh.md
docs/concepts/: artifact-situation.md  strategic-actor.md
docs/guides/: build-strategic-actor.md  run-strategic-reasoning-flow.md  situation-analysis.md
output/sap/: explanation.json  result.json
sample/app/: scenario_planning.py
src/: omen-story.md
src/omen/: __init__.py  types.py
src/omen/cli/: actor.py  (+5 more)
tests/: test_smoke.py
tests/contract/: __init__.py  _schema_utils.py  test_actor_derivation_baseline_contract.py  test_actor_ontology_output.py  test_actor_validator.py  test_analyze_formation.py  test_analyze_persona.py  test_analyze_why.py  test_contract_schemas_smoke.py  test_ontology_generation_request.py  test_reason_chain_contract.py  test_reason_chain_view_model_contract.py  test_scenario_prior_snapshot_contract.py  test_strategy_ontology_output.py
tests/integration/: test_actor_analyze_commands.py  test_actor_builder_projection.py  test_actor_builder_public_projection.py  test_actor_derivation_trace_artifact.py  test_actor_linked_paths_trace.py  test_actor_no_credentials.py  test_actor_oss_no_credentials.py  test_actor_quickstart_docs.py  test_analyze_gap_output.py  test_case_analyze_commands.py  test_case_build_timeline.py  test_case_insight_isolation.py  test_case_package_loading.py  test_cli_compare.py  test_cli_output_defaults.py  test_cli_precision_eval.py  test_counterfactual_compare.py  test_cross_case_output.py  test_deterministic_scenario_run.py  test_deterministic_scope_guardrails.py  test_evidence_chain_deterministic.py  test_ingest_assertion_workflow.py  test_ingest_candidate_workflow.py  test_nl_scenario_compilation.py  test_ontology_aware_compare.py  test_ontology_baseline.py  test_ontology_input_validation.py  test_ontology_rule_trace.py  test_precision_gate_report.py  test_precision_repeatability.py  test_reason_chain_evidence_refs.py  test_scenario_modeling_trace.py  test_scenario_planning_stability.py  test_simulate_reason_chain_integration.py  test_situation_pipeline.py  test_situation_scope_guardrails.py  test_strategic_actor_ui.py  (+2 more)
(+269 files in other folders)
