[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omen"
version = "0.1.0"
description = "Open-source strategic simulation engine for technology-market evolution"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "StrategyLogic" }]
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "pydantic>=2.8.0",
]

[project.scripts]
omen = "omen.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6.0",
  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
