[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omen"
version = "0.1.0"
description = "Open-source strategic simulation engine for technology-market evolution"
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [{ name = "StrategyLogic" }]
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "pydantic>=2.8.0",
  # used by src/omen/ingest/pdf_extract.py
  "pypdf>=4.2.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "voyageai>=0.3.2",
  "streamlit>=1.37.0",
  "plotly>=5.23.0",
  "networkx>=3.3",
  "scipy>=1.17.1",
  "python-dotenv>=1.0.1",
]

[project.scripts]
omen = "omen.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6.0",
  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
