[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omenai"
version = "0.1.1"
description = "The open-source strategic reasoning engine for technological evolution."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "StrategyLogic" }]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "NOTICE.md"]
dependencies = [
  "pydantic>=2.8.0",
  "jsonschema>=4.23.0",
  "pypdf>=4.2.0",
  "PyYAML>=6.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "voyageai>=0.3.2",
  "streamlit>=1.37.0",
  "plotly>=5.23.0",
  "networkx>=3.3",
  "scipy>=1.17.1",
  "python-dotenv>=1.0.1",
]

[project.scripts]
omen = "omen.cli.main:main"

[project.urls]
Homepage = "https://github.com/StrategyLogic/omen"
Repository = "https://github.com/StrategyLogic/omen"
Issues = "https://github.com/StrategyLogic/omen/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "pylint>=3.2.0",
  "build>=1.2.2",
  "twine>=6.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
